--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "docs": "jsdoc -c jsdoc.json"
+    "docs": "jsdoc -c jsdoc.json",
+    "codex": "codex --model gpt-5.1-codex-mini --local --diff-only --no-explain --no-review"
   },
   "repository": {
     "type": "git",
