--- a/backend/php.ini
+++ b/backend/php.ini
@@ -934,7 +934,7 @@ default_socket_timeout = 60
 ;extension=pdo_mysql
 ;extension=pdo_odbc
 ;extension=pdo_pgsql
-extension=pdo_sqlite
+;extension=pdo_sqlite ; I commented that out for phpliteadmin.php
 ;extension=pgsql
 ;extension=shmop
 
