--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "private": true,
   "scripts": {
+    "prebuild": "node scripts/generate-precache.cjs",
     "build": "tsc",
-    "watch": "tsc --watch",
+    "watch": "node scripts/generate-precache.cjs && tsc --watch",
     "server": "php -c backend/php.ini -S 0.0.0.0:5500 -t .",
     "docs": "jsdoc -c jsdoc.json",
     "codex": "codex --model gpt-5.1-codex-mini",
