--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "module": "ES2020",
         "moduleResolution": "Bundler",
         "target": "ES2019",
-        "lib": ["DOM", "ES2020"],
+        "lib": ["DOM", "ES2020", "WebWorker"],
         "types": [],
         "strict": true,
         "noUncheckedIndexedAccess": true,
