fix service-woker console errors

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "prebuild": "node scripts/generate-precache.cjs",
-    "build": "tsc",
-    "watch": "node scripts/generate-precache.cjs && tsc --watch",
+    "generate-precache": "node scripts/generate-precache.cjs",
+    "copy-service-worker": "node scripts/copy-service-worker.cjs",
+    "prebuild": "npm run generate-precache",
+    "build": "tsc && npm run copy-service-worker",
+    "watch": "npm run generate-precache && tsc --watch",
     "server": "php -c backend/php.ini -S 0.0.0.0:5500 -t .",
     "docs": "jsdoc -c jsdoc.json",
     "codex": "codex --model gpt-5.1-codex-mini",
